# PVM

./: .gitignore  CMakeLists.txt
master/: CMakeLists.txt  Makefile  cmake_install.cmake  master.cpp  stdafx.h
output/: master  slave
src/: BuildingAreaCalculator.cpp  BuildingAreaCalculator.h  CMakeLists.txt  GraphicsImgReader.cpp  GraphicsImgReader.h  Makefile  SDLWindow.cpp  SDLWindow.h  ScreenManager.cpp  ScreenManager.h  cmake_install.cmake  main.cpp  stdafx.h
